--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="login">
         <img src="./asset/loginbook.jpg" />
         <br>
-        <form action="login">
+        <form action="connect.php">
             <fieldset style="padding: 10px;">
 
                 <legend style="font-size:20px;color:wheat">LOGIN DETAILS</legend>
@@ -51,7 +51,7 @@
                 <b><p style="font-size:20px;color:white">Password: <input type="text" name="pass" id="pss" placeholder="password" autocomplete="off" /></p>
                 <br></b>
                 <p style="color:white;text-shadow:3px 3px 3px blue">If not yet registered,refer to <u> <a href="./newuser.html" style="color:white;text-decoration:none">Sign Up / New User</a></u> page <i class="fa fa-file-text"></i></p> <br>
-                <b><a href=" "><input type="submit" value="Submit" id="sub" ></a><br></b>
+                <b><a href=" "><input type="submit" value="Submit" id="sub" name="register"></a><br></b>
 
             </fieldset><br>
 
