--- a/newuser.html
+++ b/newuser.html
@@ -116,7 +116,7 @@
         <br><br>
         <br><br>
 
-        <form action="connect.php">
+        <form action="">
             <div class="regist">
 
 
