--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
                 <legend style="font-size:20px;color:wheat">LOGIN DETAILS</legend>
                 <br>
+                <b><p style="font-size:20px;color:white">Univ.roll: <input type="number" name="roll" id="rn" placeholder="univ. rollno" autocomplete="off"></p>
+                    <br></b>
                 <b> <p style="font-size:20px;color:white">Username: <input type="text" name="Uname" id="un" placeholder="username" autocomplete="off"/></p>
                 <br></b>
                 <b><p style="font-size:20px;color:white">Password: <input type="text" name="pass" id="pss" placeholder="password" autocomplete="off" /></p>
