--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="login">
         <img src="./asset/loginbook.jpg" />
         <br>
-        <form action="connect.php">
+        <form action="connect.php" method="POST">
             <fieldset style="padding: 10px;">
 
                 <legend style="font-size:20px;color:wheat">LOGIN DETAILS</legend>
