--- a/about.html
+++ b/about.html
@@ -161,7 +161,8 @@
         font-size: 30px;
         padding: .7rem 0;
         color: #fff;
-        margin-left: 20px;
+        margin-left: 30px;
+        font-family: cursive;
     }
     
     .footer .box-container .box p {
@@ -240,7 +241,7 @@
                 </label>
     <div class="sidebar">
         <ul>
-            <li><a href="#">HOME</a></li><br><br>
+            <li><a href="./index.html">HOME</a></li><br><br>
             <li><a href="./about.html">ABOUT</a></li><br><br>
             <li><a href="./newuser.html">SIGN UP/NEW USER</a></li><br><br>
             <li><a href="./contact.html">CONTACT</a></li><br><br>
@@ -272,37 +273,38 @@
         <div class="box-container">
 
             <div class="box">
-                <h3>about us</h3>
-                <p> </p>
+                <h3>About us</h3>
+                <p>E-Library is a project that manages and stores books information electronically according to students needs. The system helps both students and library manager to keep a constant track of all the books available in the library. It allows
+                    both the admin and the student to search for the desired book.</p>
             </div>
-            <div class="box" style="margin-left:30px">
-                <h3>branch locations</h3>
-                <a href="#">india</a>
-                <a href="#">USA</a>
-                <a href="#">japan</a>
-                <a href="#">france</a>
-            </div>
+
             <div class="box">
-                <h3>quick links</h3>
-                <a href="#home">home</a>
-                <a href="./package/AboutUs.html">About Us</a>
-                <a href="#Gallery">Gallery</a>
-                <a href="#Services">Services</a>
-                <a href="./package/Reviews.html">Review</a>
-                <a href="./package/Contact Us.html">Contact</a>
+                <h3 style="margin-left:50px">Quick links</h3>
+                <a href="#home" style="margin-left:55px">Home</a>
+                <a href="./about.html" style="margin-left:55px">About Us</a>
+                <a href="./newuser.html" style="margin-left:55px">Signup</a>
+                <a href="./contact.html" style="margin-left:55px">Contact</a>
 
             </div>
             <div class="box">
-                <h3>follow us</h3>
-                <a href="#">facebook</a>
-                <a href="#">instagram</a>
-                <a href="#">twitter</a>
-                <a href="#">linkedin</a>
+                <h3 style="margin-left:-25%">Follow us</h3>
+                <a href="#" style="margin-left:-120px">Facebook</a>
+                <a href="#" style="margin-left:-120px">Instagram</a>
+                <a href="#" style="margin-left:-120px">Twitter</a>
+                <a href="#" style="margin-left:-120px">Linkedin</a>
+            </div>
+
+            <div class="box">
+                <h3 style="margin-left:80%;margin-top:-17%">Developer</h3>
+                <a href="#" style="margin-left:80%"><i class="fa fa-user-circle-o" aria-hidden="true"></i>Aditi Mishra</a>
+                <a href="#" style="margin-left:80%"><i class="fa fa-envelope" aria-hidden="true"></i>aditimishra.eas@gmail.com</a>
+                <a href="#" style="margin-left:80%"><i class="fa fa-phone" aria-hidden="true"></i>+91 6307205584</a>
+                <a href="#" style="margin-left:80%"><i class="fa fa-linkedin"></i>Linkedin</a>
             </div>
 
         </div>
 
-        <h1 class="credit"> Created by <span> Aditi And Garima </span> | All rights reserved! </h1>
+        <h1 class="credit" style="font-size:25px;font-family:cursive"> Created by <span> Aditi </span> | All rights reserved! </h1>
 
     </section>
 
