--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
             <li><a href="#">HOME</a></li><br><br>
             <li><a href="./about.html">ABOUT</a></li><br><br>
-            <li><a href="./newuser.html">SIGN UP/NEW USER</a></li><br><br>
+            <li><a href="./newuser.html">SIGN UP</a></li><br><br>
             <li><a href="./contact.html">CONTACT</a></li><br><br>
         </ul>
     </div>
@@ -41,19 +41,20 @@
     <div class="login">
         <img src="./asset/loginbook.jpg" />
         <br>
-        <form action="connect.php" method="POST">
-            <fieldset style="padding: 10px;">
+        <form action="insert.php" method="POST">
+            <fieldset style="padding: 8px;margin-top:-25px">
 
-                <legend style="font-size:20px;color:wheat">LOGIN DETAILS</legend>
+                <legend style="font-size:20px;color:black; ">LOGIN DETAILS</legend>
                 <br>
-                <b><p style="font-size:20px;color:white">Univ.roll: <input type="number" name="roll" id="rn" placeholder="univ. rollno" autocomplete="off"></p>
+                <b><p style="font-size:18px;color:black;margin-top:-20px;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">University Roll no: <br><input type="number" name="roll" id="rn" placeholder="univ. rollno" autocomplete="off"></p>
                     <br></b>
-                <b> <p style="font-size:20px;color:white">Username: <input type="text" name="Uname" id="un" placeholder="username" autocomplete="off"/></p>
+                <b> <p style="font-size:18px;color:black ;margin-top:-10px;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">Username: <br><input type="text" name="Uname" id="un" placeholder="username"  autocomplete="off"/></p>
                 <br></b>
-                <b><p style="font-size:20px;color:white">Password: <input type="text" name="pass" id="pss" placeholder="password" autocomplete="off" /></p>
+                <b><p style="font-size:18px;color:black;margin-top:-10px;font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif">Password: <br><input type="password" name="pass" id="pss" placeholder="password" autocomplete="off" /></p>
                 <br></b>
-                <p style="color:white;text-shadow:3px 3px 3px blue">If not yet registered,refer to <u> <a href="./newuser.html" style="color:white;text-decoration:none">Sign Up / New User</a></u> page <i class="fa fa-file-text"></i></p> <br>
-                <b><a href=" "><input type="submit" value="Submit" id="sub" name="register"></a><br></b>
+                <input type="checkbox" name="rem" id="remem"><span style="font-weight:bold"> Remember me </span>
+                <b><input type="submit" value="Submit" id="sub" name="register"><br></b>
+                <p style="color:black;margin-top:16px;margin-left:50px ;margin-bottom:-10px">Not registered? <u> <a href="./newuser.html" style="color:blue;text-decoration:none">Sign Up</a></u> </p> <br>
 
             </fieldset><br>
 
@@ -61,6 +62,79 @@
         </form>
 
     </div>
+
+    <pre style="font-size:40px;margin-top:70px;font-weight:bold;font-family:cursive;text-align:center">B O O K S   S E C T I O N</pre>
+
+    <div class="card1">
+        <img src="./asset/book1.jpg" width="90%" height="78%" style="margin-left:15px;margin-top:20px">
+        <a href="" style="border:3px solid red;padding:10px;margin-left:-185px;background-color: rgb(248, 61, 61);height:45px;margin-top:126%;text-decoration:none;color:white">ORDER NOW</a>
+    </div>
+    <div class="card2">
+        <img src="./asset/book2.jpg" width="90%" height="78%" style="margin-left:15px;margin-top:20px">
+        <a href="" style="border:3px solid red;padding:10px;margin-left:-185px;background-color: rgb(248, 61, 61);height:45px;margin-top:126%;text-decoration:none;color:white">ORDER NOW</a>
+    </div>
+    <div class="card3">
+        <img src="./asset/book3.jpg" width="90%" height="78%" style="margin-left:15px;margin-top:20px">
+        <a href="" style="border:3px solid red;padding:10px;margin-left:-185px;background-color: rgb(248, 61, 61);height:45px;margin-top:126%;text-decoration:none;color:white">ORDER NOW</a>
+    </div>
+    <br><br><br><br>
+    <div class="card4">
+        <img src="./asset/book4.jpg" width="90%" height="78%" style="margin-left:15px;margin-top:20px">
+        <a href="" style="border:3px solid red;padding:10px;margin-left:-185px;background-color: rgb(248, 61, 61);height:45px;margin-top:126%;text-decoration:none;color:white">ORDER NOW</a>
+    </div>
+    <div class="card5">
+        <img src="./asset/book5.jpg" width="90%" height="78%" style="margin-left:15px;margin-top:20px">
+        <a href="" style="border:3px solid red;padding:10px;margin-left:-185px;background-color: rgb(248, 61, 61);height:45px;margin-top:126%;text-decoration:none;color:white">ORDER NOW</a>
+    </div>
+    <div class="card6">
+        <img src="./asset/book6.jpg" width="90%" height="78%" style="margin-left:15px;margin-top:20px">
+        <a href="" style="border:3px solid red;padding:10px;margin-left:-185px;background-color: rgb(248, 61, 61);height:45px;margin-top:126%;text-decoration:none;color:white">ORDER NOW</a>
+    </div>
+
+
+
+    <section class="footer">
+
+        <div class="box-container">
+
+            <div class="box">
+                <h3>About us</h3>
+                <p>E-Library is a project that manages and stores books information electronically according to students needs. The system helps both students and library manager to keep a constant track of all the books available in the library. It allows
+                    both the admin and the student to search for the desired book.</p>
+            </div>
+
+            <div class="box">
+                <h3 style="margin-left:50px">Quick links</h3>
+                <a href="#home" style="margin-left:55px">Home</a>
+                <a href="./about.html" style="margin-left:55px">About Us</a>
+                <a href="./newuser.html" style="margin-left:55px">Signup</a>
+                <a href="./contact.html" style="margin-left:55px">Contact</a>
+
+            </div>
+            <div class="box">
+                <h3 style="margin-left:-25%">Follow us</h3>
+                <a href="#" style="margin-left:-120px">Facebook</a>
+                <a href="#" style="margin-left:-120px">Instagram</a>
+                <a href="#" style="margin-left:-120px">Twitter</a>
+                <a href="#" style="margin-left:-120px">Linkedin</a>
+            </div>
+
+            <div class="box">
+                <h3 style="margin-left:80%;margin-top:-17%">Developer</h3>
+                <a href="#" style="margin-left:80%"><i class="fa fa-user-circle-o" aria-hidden="true"></i>Aditi Mishra</a>
+                <a href="#" style="margin-left:80%"><i class="fa fa-envelope" aria-hidden="true"></i>aditimishra.eas@gmail.com</a>
+                <a href="#" style="margin-left:80%"><i class="fa fa-phone" aria-hidden="true"></i>+91 6307205584</a>
+                <a href="#" style="margin-left:80%"><i class="fa fa-linkedin"></i>Linkedin</a>
+            </div>
+
+        </div>
+
+        <h1 class="credit" style="font-size:25px;font-family:cursive"> Created by <span> Aditi </span> | All rights reserved! </h1>
+
+    </section>
+
+
+    </footer>
 </body>
 
 </html>
