--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    <a id="top"></a>
     <div class="header">
         <h1 style="color:rgb(236, 71, 42);text-shadow:4px 4px 4px rgb(105, 6, 6);">𝔼-𝕃𝕀𝔹ℝ𝔸ℝ𝕐</h1>
     </div>
@@ -28,6 +28,7 @@
             <li><a href="#">HOME</a></li><br><br>
             <li><a href="./about.html">ABOUT</a></li><br><br>
             <li><a href="./newuser.html">SIGN UP</a></li><br><br>
+            <li><a href="table1.php">USER DETAIL</a></li><br><br>
             <li><a href="./contact.html">CONTACT</a></li><br><br>
         </ul>
     </div>
@@ -54,7 +55,7 @@
                 <br></b>
                 <input type="checkbox" name="rem" id="remem"><span style="font-weight:bold"> Remember me </span>
                 <b><input type="submit" value="Submit" id="sub" name="register"><br></b>
-                <p style="color:black;margin-top:16px;margin-left:50px ;margin-bottom:-10px">Not registered? <u> <a href="./newuser.html" style="color:blue;text-decoration:none">Sign Up</a></u> </p> <br>
+                <p style="color:black;margin-top:16px;margin-left:50px ;margin-bottom:-10px;font-weight:bold;font-size:18px">Not registered? <u> <a href="./newuser.html" style="color:blue;text-decoration:none">Sign Up</a></u> </p> <br>
 
             </fieldset><br>
 
@@ -79,15 +80,15 @@
     </div>
     <br><br><br><br>
     <div class="card4">
-        <img src="./asset/book4.jpg" width="90%" height="78%" style="margin-left:15px;margin-top:20px">
-        <a href="" style="border:3px solid red;padding:10px;margin-left:-185px;background-color: rgb(248, 61, 61);height:45px;margin-top:126%;text-decoration:none;color:white">ORDER NOW</a>
-    </div>
-    <div class="card5">
         <img src="./asset/book5.jpg" width="90%" height="78%" style="margin-left:15px;margin-top:20px">
         <a href="" style="border:3px solid red;padding:10px;margin-left:-185px;background-color: rgb(248, 61, 61);height:45px;margin-top:126%;text-decoration:none;color:white">ORDER NOW</a>
     </div>
+    <div class="card5">
+        <img src="./asset/book7.jpg" width="90%" height="78%" style="margin-left:15px;margin-top:20px">
+        <a href="" style="border:3px solid red;padding:10px;margin-left:-185px;background-color: rgb(248, 61, 61);height:45px;margin-top:126%;text-decoration:none;color:white">ORDER NOW</a>
+    </div>
     <div class="card6">
-        <img src="./asset/book6.jpg" width="90%" height="78%" style="margin-left:15px;margin-top:20px">
+        <img src="./asset/book8.jpg" width="90%" height="78%" style="margin-left:15px;margin-top:20px">
         <a href="" style="border:3px solid red;padding:10px;margin-left:-185px;background-color: rgb(248, 61, 61);height:45px;margin-top:126%;text-decoration:none;color:white">ORDER NOW</a>
     </div>
 
@@ -124,14 +125,17 @@
                 <a href="#" style="margin-left:80%"><i class="fa fa-user-circle-o" aria-hidden="true"></i>Aditi Mishra</a>
                 <a href="#" style="margin-left:80%"><i class="fa fa-envelope" aria-hidden="true"></i>aditimishra.eas@gmail.com</a>
                 <a href="#" style="margin-left:80%"><i class="fa fa-phone" aria-hidden="true"></i>+91 6307205584</a>
-                <a href="#" style="margin-left:80%"><i class="fa fa-linkedin"></i>Linkedin</a>
+                <a href="https://www.linkedin.com/in/aditi-mishra-884a721b7/" style="margin-left:80%"><i class="fa fa-linkedin"></i>Linkedin</a>
             </div>
 
         </div>
 
         <h1 class="credit" style="font-size:25px;font-family:cursive"> Created by <span> Aditi </span> | All rights reserved! </h1>
-
+        <p style="text-align: center;color:white">
+            <a href=#top><strong><big> &uparrow;<span style=color:violet>GO TO THE TOP</span></big></strong></a>
+        </p>
     </section>
+
 
 
     </footer>
